--- a/ShadowViewDecorator/app/src/main/res/layout/main_layout.xml
+++ b/ShadowViewDecorator/app/src/main/res/layout/main_layout.xml
@@ -9,8 +9,10 @@
     
     <Button
         android:id="@+id/buttonRectLeft"
-        android:layout_width="108dp"
-        android:layout_height="58dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:layout_marginLeft="4dp"
         android:text="Add"
         android:background="@drawable/button_100x50" />
     
