1.Removed duplicate methods called dropShadow and dropShadowOffset. All methods now work with offset, and can be used as nomrmal if offseet values are set to 0;

--- a/ShadowViewDecorator/app/src/main/res/layout/main_layout.xml
+++ b/ShadowViewDecorator/app/src/main/res/layout/main_layout.xml
@@ -5,8 +5,15 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:padding="20dp"
-    tools:context="com.blogspot.techzealous.shadowviewdecorator.MainActivity" >   
-    
+    tools:context="com.blogspot.techzealous.shadowviewdecorator.MainActivity" >
+
+    <TextView
+        android:layout_width="108dp"
+        android:layout_height="58dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginLeft="4dp"
+        android:background="#ff00ff00"/>
+
     <Button
         android:id="@+id/buttonRectLeft"
         android:layout_width="wrap_content"
